@@ -269,31 +269,37 @@
 <td><p>[]</p></td>
 <td><p>surface albedo</p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>cloud_fraction</strong></p></td>
+<tr class="row-odd"><td><p><strong>surface_albedo_uncertainty</strong></p></td>
+<td><p>float</p></td>
+<td><p>{<em>time</em>}</p></td>
+<td><p>[]</p></td>
+<td><p>uncertainty of the surface albedo</p></td>
+</tr>
+<tr class="row-even"><td><p><strong>cloud_fraction</strong></p></td>
 <td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[]</p></td>
 <td><p>cloud fraction from the cloud product</p></td>
 </tr>
-<tr class="row-even"><td><p><strong>absorbing_aerosol_index</strong></p></td>
+<tr class="row-odd"><td><p><strong>absorbing_aerosol_index</strong></p></td>
 <td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[]</p></td>
 <td><p>aerosol index</p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>snow_ice_type</strong></p></td>
+<tr class="row-even"><td><p><strong>snow_ice_type</strong></p></td>
 <td><p>int8</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td></td>
 <td><p>surface snow/ice type; enumeration values: snow_free_land (0), sea_ice (1), permanent_ice (2), snow (3), ocean (4)</p></td>
 </tr>
-<tr class="row-even"><td><p><strong>sea_ice_fraction</strong></p></td>
+<tr class="row-odd"><td><p><strong>sea_ice_fraction</strong></p></td>
 <td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[]</p></td>
 <td><p>sea-ice concentration (as a fraction)</p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>index</strong></p></td>
+<tr class="row-even"><td><p><strong>index</strong></p></td>
 <td><p>int32</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td></td>
@@ -515,32 +521,48 @@
 <tr class="row-even"><td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/surface_albedo[..,1]</strong></p></td>
 </tr>
-<tr class="row-odd"><td rowspan="3"><p><strong>cloud_fraction</strong></p></td>
+<tr class="row-odd"><td rowspan="5"><p><strong>surface_albedo_uncertainty</strong></p></td>
 <td><p><em>available</em></p></td>
 <td><p>optional</p></td>
 </tr>
 <tr class="row-even"><td><p><em>condition</em></p></td>
-<td><p>processor version &gt;= 01.03.00</p></td>
+<td><p>surface_albedo unset and processor version &gt;= 02.06.00</p></td>
 </tr>
 <tr class="row-odd"><td><p><em>path</em></p></td>
+<td><p><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/surface_albedo_precision[..,0]</strong></p></td>
+</tr>
+<tr class="row-even"><td><p><em>condition</em></p></td>
+<td><p>surface_albedo=772 and processor version &gt;= 02.06.00</p></td>
+</tr>
+<tr class="row-odd"><td><p><em>path</em></p></td>
+<td><p><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/surface_albedo_precision[..,1]</strong></p></td>
+</tr>
+<tr class="row-even"><td rowspan="3"><p><strong>cloud_fraction</strong></p></td>
+<td><p><em>available</em></p></td>
+<td><p>optional</p></td>
+</tr>
+<tr class="row-odd"><td><p><em>condition</em></p></td>
+<td><p>processor version &gt;= 01.03.00</p></td>
+</tr>
+<tr class="row-even"><td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/cloud_fraction[]</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><strong>absorbing_aerosol_index</strong></p></td>
+<tr class="row-odd"><td><p><strong>absorbing_aerosol_index</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/aerosol_index_354_388</strong></p></td>
 </tr>
-<tr class="row-odd"><td rowspan="2"><p><strong>snow_ice_type</strong></p></td>
+<tr class="row-even"><td rowspan="2"><p><strong>snow_ice_type</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/snow_ice_flag[]</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><em>description</em></p></td>
+<tr class="row-odd"><td><p><em>description</em></p></td>
 <td><p>0: snow_free_land (0), 1-100: sea_ice (1), 101: permanent_ice (2), 103: snow (3), 255: ocean (4), other values map to -1</p></td>
 </tr>
-<tr class="row-odd"><td rowspan="2"><p><strong>sea_ice_fraction</strong></p></td>
+<tr class="row-even"><td rowspan="2"><p><strong>sea_ice_fraction</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/snow_ice_flag[]</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><em>description</em></p></td>
+<tr class="row-odd"><td><p><em>description</em></p></td>
 <td><p>if 1 &lt;= snow_ice_flag &lt;= 100 then snow_ice_flag/100.0 else 0.0</p></td>
 </tr>
 </tbody>
